force-app/main/default/objects/Ticket_Type__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Early_Bird_Sales_End_Date_Time__c</fullName>
        <label>Actual Early Bird Sales End Date Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Early_Bird_Sales_Start_Date_Time__c</fullName>
        <label>Actual Early Bird Sales Start Date Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Sales_End_Date_Time__c</fullName>
        <label>Actual Sales End Date Time</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Sales_Start_Date_Time__c</fullName>
        <label>Actual Sales Start Date/Time</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Early_Bird_Price__c</fullName>
        <label>Early Bird Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Early_Bird_Sales_End_Date_Time__c</fullName>
        <label>Early Bird Sales End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Early_Bird_Sales_Start_Date_Time__c</fullName>
        <label>Early Bird Sales Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Add_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Add On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Ticket Types</relationshipLabel>
        <relationshipName>Ticket_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>The location of the ticketed event (if it is not the same as the event listing).</description>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Max_Purchase_Number__c</fullName>
        <description>The maximum number of tickets that can be reserved by one constituent.</description>
        <label>Max Purchase Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The price of the ticket.</description>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RSVP_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The number of  RSVPs that a ticket is valid for.</description>
        <label>RSVP Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_End_Date_Time__c</fullName>
        <label>Sales End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Start_Date_Time__c</fullName>
        <label>Sales Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sessions__c</fullName>
        <label>Sessions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT–04:00) Eastern Daylight Time (America/Indiana/Indianapolis)</fullName>
                </value>
                <value>
                    <fullName>(GMT–04:00) Eastern Daylight Time (America/New_York)</fullName>
                </value>
                <value>
                    <fullName>(GMT–05:00) Central Daylight Time (America/Chicago)</fullName>
                </value>
                <value>
                    <fullName>(GMT–05:00) Central Daylight Time (America/Mexico_City)</fullName>
                </value>
                <value>
                    <fullName>(GMT–05:00) Eastern Standard Time (America/Panama)</fullName>
                </value>
                <value>
                    <fullName>(GMT–06:00) Mountain Standard Time (America/Mazatlan)</fullName>
                </value>
                <value>
                    <fullName>(GMT–06:00) Central Standard Time (America/El_Salvador)</fullName>
                </value>
                <value>
                    <fullName>(GMT–06:00) Mountain Daylight Time (America/Denver)</fullName>
                </value>
                <value>
                    <fullName>(GMT–07:00) Pacific Daylight Time (America/Tijuana)</fullName>
                </value>
                <value>
                    <fullName>(GMT–07:00) Mountain Standard Time (America/Phoenix)</fullName>
                </value>
                <value>
                    <fullName>(GMT–07:00) Pacific Daylight Time (America/Los_Angeles)</fullName>
                </value>
                <value>
                    <fullName>(GMT–08:00) Pitcairn Standard Time (Pacific/Pitcairn)</fullName>
                </value>
                <value>
                    <fullName>(GMT–08:00) Alaska Daylight Time (America/Anchorage)</fullName>
                </value>
                <value>
                    <fullName>(GMT–9:00) Hawaii-Aleutian Standard Time (America/Adak)</fullName>
                </value>
                <value>
                    <fullName>(GMT–10:00) Hawaii-Aleutian Standard Time (Pacific/Honolulu)</fullName>
                </value>
                <value>
                    <fullName>(GMT+14:00) Line Is. Time (Pacific/Kiritimati)</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Phoenix Is.Time (Pacific/Enderbury)</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:45) Chatham Standard Time (Pacific/Chatham)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Fiji Time (Pacific/Fiji)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Petropavlovsk-Kamchatski Time (Asia/Kamchatka)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:30) Norfolk Time (Pacific/Norfolk)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Lord Howe Standard Time (Australia/Lord_Howe)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Solomon Is. Time (Pacific/Guadalcanal)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:30) Australian Central Standard Time ((South Australia) Australia/Adelaide)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australian Eastern Standard Time (New South Wales) (Australia/Sydney)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australian Eastern Standard Time (Queensland) (Australia/Brisbane)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Australian Central Standard Time (Northern Territory) (Australia/Darwin)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Korea Standard Time (Asia/Seoul)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>The time of the ticketed event (if it is not the same as the event listing).</description>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Tickets__c</fullName>
        <description>The number of tickets that can be sold of this ticket type.</description>
        <label>Total Number of Tickets</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tickets_Sold__c</fullName>
        <label>Total Tickets Sold</label>
        <summarizedField>Ticket__c.Number_of_Tickets__c</summarizedField>
        <summaryForeignKey>Ticket__c.Ticket_Type__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Ticket Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ticket Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>